# ruggine

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md
.github/workflows/: README.md  docker-deploy.yaml  e2e-and-promote.yaml
cheats/: Caddyfile  deploy_script.sh  serve-static.sh
e2e-scripts/: local_quick_tests.sh  tests.sh
infra/: README.md  deployment.yaml  kustomization.yaml  namespace.yaml
infra/base/: deployment.yaml  doppler-secret.yaml  ingress.yaml  kustomization.yaml
infra/flux/: base.yaml  kustomization.yaml  prod.yaml  staging.yaml
infra/overlays/prod/: kustomization.yaml  patch-ingress.yaml  patch-labels.yaml
infra/overlays/staging/: certificate.yaml  kustomization.yaml  patch-deployment.yaml  patch-ingress.yaml  patch-labels.yaml
src/: main.rs
src/handlers/: mod.rs  static_handler.rs  url_shortener.rs  utils.rs
src/models/: mod.rs
static/: index.html
